@@ -398,24 +398,27 @@ static void removeEntry(SEXP table, SEXP x, int indx, HashData *d)
 SEXP duplicated(SEXP x, Rboolean from_last)
 {
     SEXP ans;
-    int *h, *v;
-    int i, n;
-    HashData data;
+    int *v;
+#define DUPLICATED_INIT                                                                                                \
+    int *h, i, n;                                                                                                      \
+    HashData data;                                                                                                     \
+                                                                                                                       \
+    if (!isVector(x))                                                                                                  \
+        error(_("'duplicated' applies only to vectors"));                                                              \
+                                                                                                                       \
+    n = LENGTH(x);                                                                                                     \
+    HashTableSetup(x, &data);                                                                                          \
+    h = INTEGER(data.HashTable)
 
-    if (!isVector(x))
-        error(_("'duplicated' applies only to vectors"));
+    DUPLICATED_INIT;
 
-    n = LENGTH(x);
-    HashTableSetup(x, &data);
     PROTECT(data.HashTable);
     ans = allocVector(LGLSXP, n);
     UNPROTECT(1);
-    h = INTEGER(data.HashTable);
     v = LOGICAL(ans);
 
     for (i = 0; i < data.M; i++)
         h[i] = NIL;
-
     if (from_last)
         for (i = n - 1; i >= 0; i--)
             v[i] = isDuplicated(x, i, &data);
@@ -426,27 +429,42 @@ SEXP duplicated(SEXP x, Rboolean from_last)
     return ans;
 }
 
+/* simpler version of the above : return 1-based index of first, or 0 : */
+int any_duplicated(SEXP x, Rboolean from_last)
+{
+    DUPLICATED_INIT;
+
+    for (i = 0; i < data.M; i++)
+        h[i] = NIL;
+    if (from_last)
+    {
+        for (i = n - 1; i >= 0; i--)
+            if (isDuplicated(x, i, &data))
+                return ++i;
+    }
+    else
+    {
+        for (i = 0; i < n; i++)
+            if (isDuplicated(x, i, &data))
+                return ++i;
+    }
+    return 0;
+}
+
 SEXP duplicated3(SEXP x, SEXP incomp, Rboolean from_last)
 {
     SEXP ans;
-    int *h, *v;
-    int i, j, n, m;
-    HashData data;
+    int *v, j, m;
 
-    if (!isVector(x))
-        error(_("'duplicated' applies only to vectors"));
+    DUPLICATED_INIT;
 
-    n = LENGTH(x);
-    HashTableSetup(x, &data);
     PROTECT(data.HashTable);
     ans = allocVector(LGLSXP, n);
     UNPROTECT(1);
-    h = INTEGER(data.HashTable);
     v = LOGICAL(ans);
 
     for (i = 0; i < data.M; i++)
         h[i] = NIL;
-
     if (from_last)
         for (i = n - 1; i >= 0; i--)
             v[i] = isDuplicated(x, i, &data);
@@ -474,8 +492,55 @@ SEXP duplicated3(SEXP x, SEXP incomp, Rboolean from_last)
     return ans;
 }
 
+/* return (1-based) index of first duplication, or 0 : */
+int any_duplicated3(SEXP x, SEXP incomp, Rboolean from_last)
+{
+    int j, m = length(incomp);
+
+    DUPLICATED_INIT;
+
+    if (m)
+    {
+        PROTECT(incomp = coerceVector(incomp, TYPEOF(x)));
+        m = length(incomp);
+    }
+
+    for (i = 0; i < data.M; i++)
+        h[i] = NIL;
+    if (from_last)
+        for (i = n - 1; i >= 0; i--)
+        {
+#define IS_DUPLICATED_CHECK
+            if (isDuplicated(x, i, &data))
+            {
+                Rboolean isDup = TRUE;
+                for (j = 0; j < m; j++)
+                    if (data.equal(x, i, incomp, j))
+                    {
+                        isDup = FALSE;
+                        break;
+                    }
+                if (isDup)
+                    return ++i;
+                /* else continue */
+            }
+            IS_DUPLICATED_CHECK;
+        }
+    else
+    {
+        for (i = 0; i < n; i++)
+            IS_DUPLICATED_CHECK;
+    }
+
+    return 0;
+}
+
+#undef IS_DUPLICATED_CHECK
+#undef DUPLICATED_INIT
+
 /* .Internal(duplicated(x))       [op=0]
    .Internal(unique(x))	          [op=1]
+   .Internal(anyDuplicated(x))    [op=2]
 */
 SEXP attribute_hidden do_duplicated(SEXP call, SEXP op, SEXP args, SEXP env)
 {
@@ -486,22 +551,32 @@ SEXP attribute_hidden do_duplicated(SEXP call, SEXP op, SEXP args, SEXP env)
     x = CAR(args);
     /* handle zero length vectors, and NULL */
     if ((n = length(x)) == 0)
-        return (allocVector(PRIMVAL(op) != 1 ? LGLSXP : TYPEOF(x), 0));
+        return (allocVector(PRIMVAL(op) == 0 ? LGLSXP : (PRIMVAL(op) == 1 ? TYPEOF(x) : /* 2 */ INTSXP), 0));
 
     if (!isVector(x))
     {
-        error(_("%s() applies only to vectors"), (PRIMVAL(op) == 0 ? "duplicated" : "unique"));
+        error(_("%s() applies only to vectors"),
+              (PRIMVAL(op) == 0 ? "duplicated" : (PRIMVAL(op) == 1 ? "unique" : /* 2 */ "anyDuplicated")));
     }
 
     incomp = CADR(args);
 
     if (length(incomp) && /* S has FALSE to mean empty */
         !(isLogical(incomp) && length(incomp) == 1 && LOGICAL(incomp)[0] == 0))
-        dup = duplicated3(x, incomp, asLogical(CADDR(args)));
+    {
+        if (PRIMVAL(op) == 2) /* return R's 1-based index :*/
+            return ScalarInteger(any_duplicated3(x, incomp, asLogical(CADDR(args))));
+        else
+            dup = duplicated3(x, incomp, asLogical(CADDR(args)));
+    }
     else
-        dup = duplicated(x, asLogical(CADDR(args)));
-
-    if (PRIMVAL(op) == 0) /* "duplicated()" : */
+    {
+        if (PRIMVAL(op) == 2)
+            return ScalarInteger(any_duplicated(x, asLogical(CADDR(args))));
+        else
+            dup = duplicated(x, asLogical(CADDR(args)));
+    }
+    if (PRIMVAL(op) == 0) /* "duplicated()" */
         return dup;
     /*	ELSE
     use the results of "duplicated" to get "unique" */
